Bug #42541 (Check for namespace decl. on first line doesn't work when extended info is on)